--- a/404.md
+++ b/404.md
@@ -1,2 +1,5 @@
-404 :(
+404
 ============
+Oh no! It looks like you've reached a none existant page.
+Check the URL for any mistakes or click [here](index.md) to return to the home page.
+![Sad](https://i.imgur.com/A4hPXoL.png)
