Update 404.md - grammar

--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 404
 ============
-Oh no! It looks like you've reached a none existant page.
+Oh no! It looks like you've reached a nonexistant page.
 Check the URL for any mistakes or click [here](index.md) to return to the home page.
